# 2023sp-420-G-J-IFY

./: .gitignore  Game1.json  Makefile  MeetingGame.json  README.md  RestructureTest.json  SaveGameTest1.json  Skeleton.txt  StyleGuide.md  TESTFILE2.json  TESTFILE3.json  TESTFILE5.json  Waxworks.json  __main__.py  extremeMode.json  flapjack.json  help.json  requirements.txt  setup.cfg  setup.py  shortestGame.json  warlock.json
.github/workflows/: python-app.yml
GameSaves/: WaxworksComplete.json
SpellingBee/: MakePuzzle.py  __main__.py  generateSubset.py  saveStateTests.py
Words/: DBupdate.py  pangrams.txt  pangrams10.txt  pangrams11.txt  pangrams12.txt  pangrams13.txt  pangrams14.txt  pangrams15.txt  pangrams7.txt  pangrams8.txt  pangrams9.txt  setupDataBase.py  validWordsDictionary.json
coolGames/: longestGame.json  shortestGame.json
data/db/Words/: LenFinder.py
spellingbee/: __init__.py  __main__.py
spellingbee/controller/: CLIAdapter  GUIAdapter.py  __init__.py  cmd.py
spellingbee/cview/: CLI.py  __init__.py
spellingbee/gview/: Dialogs.py  HexCluster.py  Leaderboard.py  MainWindow.py  SimpleBCluster.py  StatsPanel.py  WelcomePage.py  WrapUp.py  __init__.py  style.css
spellingbee/model/: MakePuzzle.py  ObjectPool.py  StateStorage.py  __init__.py  dbFixer.py  encrypter.py  highScore.db  highScore.py  hint.py  output.py  puzzle.py
spellingbee/tests/: MakePuzzleTests.py  StateStorageTests.py  __main__.py  hintTests.py  saveCheckTests.py  saveStateTests.py  test_MakePuzzleTests.py  test_ObjectPool.py  test_Puzzle.py  test_StateStorageTests.py  test_encryption.py  test_highScore.py  test_hintTests.py  test_output.py  test_saveCheckTests.py
src/: __main__.py
src/CommandLine/: CLI.py  CommandHandler.py  add.py  design.txt  fmanager.py
src/SpellingBee/: CLI.py  CommandHandler.py  MakePuzzle.py  MakePuzzleTests.py  MeetingGame.json  StateStorage.py  StateStorageTests.py  __main__.py  allTests.py  design.txt  generateMaxScore.py  generateSubset.py  guess.py  saveState.py  saveStateTests.py  showPuzzle.py  showStatus.py  shuffle.py
src/controller/: CommandHandler.py  GController.py  __init__.py
src/cview/: CLI.py
src/gview/: ButtonCluster.py  Dialogs.py  HexCluster.py  LoadDialog.py  MainWindow.py  StatsPanel.py  WordsWidget.py  __init__.py  __main__.py
src/model/: MakePuzzle.py  StateStorage.py  __init__.py  dbFixer.py  generateMaxScore.py  output.py  puzzle.py  saveState.py
src/spelling_bee/: MakePuzzle.py  StateStorage.py
src/tests/: MakePuzzleTests.py  StateStorageTests.py  saveCheckTests.py  saveStateTests.py
tests/: MakePuzzleTests.py  StateStorageTests.py  __main__.py  allTests.py  saveCheckTests.py  saveCheckerTest.py  saveStateTests.py  tempTestCode.py  tests.py
tests/saves/: BADEVERYTHING.json  badFields.json  badGameSeed.json  badGuess.json  badMaxScore.json  kamotiqGood.json  waxworkGood.json
(+26 files in other folders)
