# Metadata for the setup config. Keep as much setup configuration as possible
# in this file rather than setup.py. This is to allow the client to view setup
# config metadata without needing to run any python first.

[metadata]
name = spelling_bee #package name, tentative
version = 0.0.1
license = MIT
description = to be written
long_description = file: README.md
author = Isaak Weidman, Gaige Zakroski, Yah hymbey Baruti Ali-Bey, Francesco Spagnolo
author_email = irweidma@millersville.edu, gmzakros@millersville.edu, yabaruti@millersville.edu, fnspagno@millersville.edu
classifiers =
    <classifier 1>
    <classifier 2>
    <...>
    <classifier n>
    # Dont know what these do, but I guess I'll figure tht out later

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    <requirement 1>
    <requirement 2>
    <...>
    <requirement n>

[options.packages.find]
where=src