# Metadata for the setup config. Keep as much setup configuration as possible
# in this file rather than setup.py. This is to allow the client to view setup
# config metadata without needing to run any python first.

[metadata]
name = spelling_bee
version = 0.0.1
license = MIT
projectStructure
url = https://github.com/mucsci-students/2023sp-420-G-J-IFY.git
author = Isaak Weidman, Gaige Zakroski, Yah hymbey Baruti Ali-Bey, Francesco Spagnolo, <add your names here>
author_email = irweidma@millersville.edu, gmzakros@millersville.edu, yabaruti@millersville.edu, fnspagno@millersville.edu, <add email here>
description = to be written
long_description = file: README.md
author = Isaak Weidman, Gaige Zakroski, Yah hymbey Baruti Ali-Bey, Francesco Spagnolo
author_email = irweidma@millersville.edu, gmzakros@millersville.edu, yabaruti@millersville.edu, fnspagno@millersville.edu
classifiers =
    <classifier 1>
    <classifier 2>
    <...>
    <classifier n>
    # Dont know what these do, but I guess I'll figure tht out later
develop

[options]
package_dir =
    =src
packages = find:

[options.packages.find]
where=src