# Metadata for the setup config. Keep as much setup configuration as possible
# in this file rather than setup.py. This is to allow the client to view setup
# config metadata without needing to run any python first.

[metadata]
name = spelling_bee
license = MIT
url = https://github.com/mucsci-students/2023sp-420-G-J-IFY.git
author = Isaak Weidman, Gaige Zakroski, Yah hymbey Baruti Ali-Bey, Francesco Spagnolo, Jacob JAMLIKE Lovgren
author_email = irweidma@millersville.edu, gmzakros@millersville.edu, yabaruti@millersville.edu, fnspagno@millersville.edu, jmlovegr@millersville.edu

[options]
package_dir=
    =src
packages=find:

[options.extras_require]
test =
    pytest

[options.packages.find]
where=src